--- a/templates/orders/order_detail.html
+++ b/templates/orders/order_detail.html
@@ -204,28 +204,46 @@
 
             </div>
         </div>
-        <div class="row">
-            <div class="col">
+    <!-- start: page -->
+					<div class="row">
+						<div class="col-lg-12">
+							<section class="card">
+								<header class="card-header">
+									<div class="card-actions">
+										<a href="#" class="card-action card-action-toggle" data-card-toggle></a>
+										<a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
+									</div>
 
-                <div class="card card-modern">
-                    <div class="card-header">
-                        <h2 class="card-title">Manzil</h2>
-                    </div>
-                    <div class="card-body">
-
-                        <div class="form-row">
-                            <div class="form-group col pb-1 mb-3">
-                                <label>Add Note</label>
-                                <textarea class="form-control form-control-modern" name="orderAddNote"
-                                          rows="6"></textarea>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
+									<h2 class="card-title">Basic with Markers</h2>
+								</header>
+								<div class="card-body">
+									<div id="gmap-basic-marker" style="height: 500px; width: 100%;"></div>
+								</div>
+							</section>
+						</div>
+					</div>
+{#        <div class="row">#}
+{#            <div class="col">#}
+{##}
+{#                <div class="card card-modern">#}
+{#                    <div class="card-header">#}
+{#                        <h2 class="card-title">Manzil</h2>#}
+{#                    </div>#}
+{#                    <div class="card-body">#}
+{##}
+{#                        <div class="form-row">#}
+{#                            <div class="form-group col pb-1 mb-3">#}
+{#                                <label>Add Note</label>#}
+{#                                <textarea class="form-control form-control-modern" name="orderAddNote"#}
+{#                                          rows="6"></textarea>#}
+{#                            </div>#}
+{#                        </div>#}
+{##}
+{#                    </div>#}
+{#                </div>#}
+{##}
+{#            </div>#}
+{#        </div>#}
         <div class="row action-buttons">
             <div class="col-12 col-md-auto">
                 <a href="#"
