--- a/templates/orders/order_detail.html
+++ b/templates/orders/order_detail.html
@@ -297,10 +297,8 @@
 
         <div class="row action-buttons">
             <div class="col-12 col-md-auto">
-                <a href="#modalBasic"
-                   class="delete-button btn btn-danger btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1">
-                    <i class="bx bx-trash text-4 me-2"></i> Bekor qilish
-                </a>
+                <a class="mb-1 mt-1 me-1 modal-basic btn btn-danger  delete-button btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1"
+                   href="#modalBasic"><i class="bx bx-trash text-4 me-2"></i>Bekor qilish</a>
             </div>
 
             <div class="col-12 col-md-auto ms-md-auto mt-3 mt-md-0 ms-auto">
@@ -315,23 +313,28 @@
     <div id="modalBasic" class="modal-block mfp-hide">
         <section class="card">
             <header class="card-header">
-                <h2 class="card-title">Are you sure?</h2>
+                <h2 class="card-title">Bekor qilish</h2>
             </header>
             <div class="card-body">
                 <div class="modal-wrapper">
                     <div class="modal-text">
-                        <p class="mb-0">Are you sure that you want to delete this image?</p>
+                        <p class="mb-0">Siz haqiqatdan buyurtmani berkor qilmoqchimisiz?</p>
                     </div>
                 </div>
             </div>
+
             <footer class="card-footer">
                 <div class="row">
-                    <div class="col-md-12 text-end">
-                        <button class="btn btn-primary modal-confirm">Confirm</button>
-                        <button class="btn btn-default modal-dismiss">Cancel</button>
-                    </div>
+                    <form action="{% url 'orders:order_cancel' order.uuid %}" method="post">
+                        {% csrf_token %}
+                        <div class="col-md-12 text-end">
+                            <button class="btn btn-default modal-dismiss">Yoq</button>
+                            <button type="submit" class="btn btn-primary modal-confirm">Ha</button>
+                        </div>
+                    </form>
                 </div>
             </footer>
+
         </section>
     </div>
 
@@ -343,8 +346,8 @@
 
 {% block additional_js %}
     <!-- Specific Page Vendor -->
-		<script src="{% static 'vendor/select2/js/select2.js' %}"></script>
-		<script src="{% static 'vendor/pnotify/pnotify.custom.js' %}"></script>
+    <script src="{% static 'vendor/select2/js/select2.js' %}"></script>
+    <script src="{% static 'vendor/pnotify/pnotify.custom.js' %}"></script>
     <!-- Examples -->
     <script src="{% static 'js/examples/examples.modals.js' %}"></script>
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
