--- a/templates/_includes/navbar.html
+++ b/templates/_includes/navbar.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n %}
 <!-- start: header -->
 <header class="header header-nav-menu header-nav-links">
     <div class="logo-container">
@@ -16,21 +16,37 @@
 
     <!-- start: search & user box -->
     <div class="header-right">
-
-        <a class="btn search-toggle d-none d-md-inline-block d-xl-none" data-toggle-class="active"
-           data-target=".search"><i class="bx bx-search"></i></a>
-        <span class="separator"></span>
+        {##}
+        {#        <a class="btn search-toggle d-none d-md-inline-block d-xl-none" data-toggle-class="active"#}
+        {#           data-target=".search"><i class="bx bx-search"></i></a>#}
+        {#        <span class="separator"></span>#}
+        {#        <a class="dropdown-language nav-link" href="#" role="button" id="dropdownLanguage" data-bs-toggle="dropdown"#}
+        {#           aria-haspopup="true" aria-expanded="false">#}
+        {#            <img src="{% static 'img/blank.gif' %}" class="flag flag-uz" alt="English"/> O'zbek#}
+        {#            <i class="fas fa-chevron-down"></i>#}
+        {#        </a>#}
+        {#        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLanguage">#}
+        {#            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-uz"#}
+        {#                                                   alt="English"/> O'zbek</a>#}
+        {#            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-ru"#}
+        {#                                                   alt="English"/> Русский</a>#}
+        {##}
+        {#        </div>#}
         <a class="dropdown-language nav-link" href="#" role="button" id="dropdownLanguage" data-bs-toggle="dropdown"
            aria-haspopup="true" aria-expanded="false">
-            <img src="{% static 'img/blank.gif' %}" class="flag flag-uz" alt="English"/> O'zbek
-            <i class="fas fa-chevron-down"></i>
+           {% trans "Til" %}:
+    <img src="{% static 'img/blank.gif' %}" class="flag flag-{{ LANGUAGE_CODE }}" alt="{{ LANGUAGE_CODE }}"/>
+    {{ get_language_info.LANGUAGE_CODE.name }}
+    <i class="fas fa-chevron-down"></i>
         </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLanguage">
-            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-uz"
-                                                   alt="English"/> O'zbek</a>
-            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-ru"
-                                                   alt="English"/> Русский</a>
 
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLanguage">
+            <a class="dropdown-item" href="{% url 'set_language' 'uz' %}"><img src="{% static 'img/blank.gif' %}"
+                                                                               class="flag flag-uz" alt="O'zbek"/>
+                O'zbek</a>
+            <a class="dropdown-item" href="{% url 'set_language' 'ru' %}"><img src="{% static 'img/blank.gif' %}"
+                                                                               class="flag flag-ru" alt="Русский"/>
+                Русский</a>
         </div>
 
         <span class="separator"></span>
@@ -108,7 +124,8 @@
                 <span class="profile-picture profile-picture-as-text"><i class="bx bx-user"></i></span>
                 <div class="profile-info profile-info-no-role" data-lock-name="John Doe"
                      data-lock-email="johndoe@okler.com">
-                    <span class="name"> <strong class="font-weight-semibold">{{ user.first_name }} {{ user.last_name }}</strong></span>
+                    <span class="name"> <strong
+                            class="font-weight-semibold">{{ user.first_name }} {{ user.last_name }}</strong></span>
                 </div>
 
                 <i class="fas fa-chevron-down text-color-dark"></i>
@@ -117,12 +134,14 @@
             <div class="dropdown-menu">
                 <ul class="list-unstyled">
                     <li>
-                        <a role="menuitem" tabindex="-1" href="{%  url 'accounts:user_detail' user.id %}"><i class="bx bx-user"></i>
+                        <a role="menuitem" tabindex="-1" href="{% url 'accounts:user_detail' user.id %}"><i
+                                class="bx bx-user"></i>
                             My Profile</a>
                     </li>
 
                     <li>
-                        <a role="menuitem" tabindex="-1" href="{% url 'accounts:logout' %}"><i class="bx bx-log-out"></i>
+                        <a role="menuitem" tabindex="-1" href="{% url 'accounts:logout' %}"><i
+                                class="bx bx-log-out"></i>
                             Logout</a>
                     </li>
                 </ul>
