--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n %}
 
 
 <!-- start: sidebar -->
@@ -19,52 +19,52 @@
                     <li>
                         <a class="nav-link" href="{% url 'accounts:home' %}">
                             <i class="bx bx-home-alt" aria-hidden="true"></i>
-                            <span>Dashboard</span>
+                            <span>{% trans Dashboard %}</span>
                         </a>
                     </li>
                     <hr class="separator">
                     <li>
                         <a class="nav-link" href="{% url 'orders:order_list' %}">
                             <i class="bx bx-detail" aria-hidden="true"></i>
-                            <span>Buyurtmalar</span>
+                            <span>{% trans Buyurtmalar %}</span>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" href="{% url 'clients:client_list' %}">
                             <i class="bx bx-user" aria-hidden="true"></i>
-                            <span>Mijozlar</span>
+                            <span>{% trans Mijozlar %}</span>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" href="{% url 'products:product_list' %}">
                             <i class="bx bxl-product-hunt" aria-hidden="true"></i>
-                            <span>Mahsulotlar</span>
+                            <span>{% trans Mahsulotlar %}</span>
                         </a>
                     </li>
                     <li class="nav-parent">
                         <a class="nav-link" href="#">
                             <i class="bx bx-money" aria-hidden="true"></i>
-                            <span>To'lovlar</span>
+                            <span>{% trans Tolovlar %}</span>
                         </a>
                         <ul class="nav nav-children">
                             <li>
                                 <a class="nav-link" href="{% url 'transactions:transaction_list' %}">
-                                    To'lov operatsiyalar
+                                    {% trans Tolov operatsiyalar %}
                                 </a>
                             </li>
                             <li>
                                 <a class="nav-link" href="{% url 'accounts:cash' user.id %}">
-                                    Naqt
+                                    {% trans Naqt %}
                                 </a>
                             </li>
                             <li>
                                 <a class="nav-link" href="{% url 'accounts:bank' user.id %}">
-                                    Bank
+                                    {% trans Bank %}
                                 </a>
                             </li>
                             <li>
                                 <a class="nav-link" href="{% url 'transactions:transaction_add' %}">
-                                    Yangi to'lov
+                                    {% trans Yangi tolov %}
                                 </a>
                             </li>
                         </ul>
@@ -72,18 +72,18 @@
                     <li class="nav-parent">
                         <a class="nav-link" href="#">
                             <i class="bx bx-transfer" aria-hidden="true"></i>
-                            <span>Debit-Kredit</span>
+                            <span>{% trans Debit-Kredit %}</span>
                         </a>
                         <ul class="nav nav-children">
 
                             <li>
                                 <a class="nav-link" href="{% url 'clients:debit_credit' %}">
-                                    Mijozlar
+                                    {% trans Mijozlar %}
                                 </a>
                             </li>
                             <li>
                                 <a class="nav-link" href="#">
-                                    Buyurtmalar
+                                    {% trans Buyurtmalar %}
                                 </a>
                             </li>
 
@@ -93,23 +93,23 @@
                     <li class="nav-parent">
                         <a class="nav-link" href="#">
                             <i class="bx bx-info-circle" aria-hidden="true"></i>
-                            <span>Umumiy ma'lumot</span>
+                            <span>{% trans Umumiy malumot %}</span>
                         </a>
                         <ul class="nav nav-children">
 
                             <li>
                                 <a class="nav-link" href="{% url 'accounts:company_list' user.id %}">
-                                    Kompaniya
+                                    {% trans Kompaniya %}
                                 </a>
                             </li>
                             <li>
                                 <a class="nav-link" href="{% url 'accounts:money_saver_list' user.id %}">
-                                    Bank
+                                    {% trans Bank %}
                                 </a>
                             </li>
                             <li>
                                 <a class="nav-link" href="{% url 'products:binding_type_list' user.id %}">
-                                    Bog'lama turi
+                                    {% trans Boglama turi %}
                                 </a>
                             </li>
 
